--- a/styles.html
+++ b/styles.html
@@ -20,4 +20,20 @@
     color: inherit;
     display: block;
   }
+  koa-icon.singleicon{
+    --iron-icon-width:100%;
+    --iron-icon-height:100%;
+    width:100%;
+  }
+  koa-icon.texticon{
+    color:var(--secondary-text-color);
+    padding-right:10px;
+  }
+  .grouplist a.border{
+    border:1px var(--divider-color) solid;
+  }
+
+  .grouplist android-grid a{
+    box-sizing:border-box;
+  }
 </style>
