Border fix for koa-grid

--- a/styles.html
+++ b/styles.html
@@ -31,6 +31,7 @@
   }
   .grouplist a.border{
     border:1px var(--divider-color) solid;
+    margin: 0px -1px;
   }
 
   .grouplist android-grid a{
