adding list view

--- a/styles.html
+++ b/styles.html
@@ -37,4 +37,7 @@
   .grouplist android-grid a{
     box-sizing:border-box;
   }
+  .listContainer {
+    border-bottom: 1px solid #CCC;
+  }
 </style>
