--- a/styles.html
+++ b/styles.html
@@ -1,31 +1,33 @@
 <style is="custom-style">
-  .list {
+  .grouplist .list {
     @apply(--layout-vertical);
     padding-top: 12px;
     margin: 12px;
     @apply(--shadow-elevation-2dp);
   }
 
-  .short {
+  .grouplist .short {
     padding-top: 12px;
   }
 
-  .flex {
+  .grouplist .flex {
     @apply(--layout-flex);
   }
 
-  a {
+  .grouplist a {
     outline: none;
     text-decoration: none;
     color: inherit;
     display: block;
+    width:100%;
+    position:relative;
   }
-  koa-icon.singleicon{
+  .grouplist koa-icon.singleicon{
     --iron-icon-width:100%;
     --iron-icon-height:100%;
     width:100%;
   }
-  koa-icon.texticon{
+  .grouplist koa-icon.texticon{
     color:var(--secondary-text-color);
     padding-right:10px;
   }
@@ -33,11 +35,19 @@
     border:1px var(--divider-color) solid;
     margin: 0px -1px;
   }
-
+  .grouplist koa-icon.itemIcon {
+    float:left;
+    margin-right:10px;
+  }
+  .grouplist koa-icon.rightIcon {
+    position:absolute;
+    right:0px;
+    top:0px;
+  }
   .grouplist android-grid a{
     box-sizing:border-box;
   }
-  .listContainer {
+  .grouplist .listContainer {
     border-bottom: 1px solid #CCC;
   }
 </style>
